--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -48,9 +48,9 @@
 # }
 
   server {
-   listen 80 reuseport;
+   listen 80 reuseport defaultserver;
 #  listen 443 ssl http2 reuseport;
-   server_name example.com;
+   server_name _;
  
    access_log  /var/log/nginx/access.log  main;
    error_log   /var/log/nginx/error.log  error;
