--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -67,7 +67,7 @@
 #  ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
 	
    ## phpMyAdmin configuration
-   include conf_m2/phpmyadmin.conf;
+#  include conf_m2/phpmyadmin.conf;
 	
    ## Nginx and php-fpm status
    include conf_m2/status.conf;
