--- a/magento2/conf_m2/php_backend.conf
+++ b/magento2/conf_m2/php_backend.conf
@@ -1,6 +1,6 @@
 
 ## specific security and compatibility headers
-add_header X-Config-By 'MagenX -= www.magenx.com =-' always;
+add_header X-Config-By 'Many.co.uk -= www.many.co.uk =-' always;
 add_header X-Request-Time $request_time always;
 add_header X-Request-ID $request_id always;
 add_header Strict-Transport-Security $hsts_header always;
