--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -48,7 +48,7 @@
 # }
 
   server {
-   listen 80 reuseport defaultserver;
+   listen 80 reuseport default_server;
 #  listen 443 ssl http2 reuseport;
    server_name _;
  
