Switch path to /var/www/html

--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -14,7 +14,7 @@ server {
     }
 
     ## Set Magento root folder
-    set $MAGE_ROOT /var/app/current;
+    set $MAGE_ROOT /var/www/html;
 
     ## Set main public directory /pub
     root $MAGE_ROOT/pub;
