Move pagespeed module to http block rather than server

--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -1,6 +1,14 @@
 ## Maps config file
 include conf_m2/maps.conf;
 
+pagespeed StatisticsLogging on;
+pagespeed StatisticsPath /ngx_pagespeed_statistics;
+pagespeed GlobalStatisticsPath /ngx_pagespeed_global_statistics;
+pagespeed MessagesPath /ngx_pagespeed_message;
+pagespeed ConsolePath /pagespeed_console;
+pagespeed AdminPath /pagespeed_admin;
+pagespeed GlobalAdminPath /pagespeed_global_admin;
+
 server {
 
     listen 80 reuseport default_server;
