--- a/magento2/conf_m2/pagespeed.conf
+++ b/magento2/conf_m2/pagespeed.conf
@@ -57,23 +57,16 @@ pagespeed EnableFilters insert_dns_prefetch;
 pagespeed RetainComment "esi*";
 pagespeed Disallow "*/ADMIN_PLACEHOLDER/*";
 
-pagespeed StatisticsLogging on;
-pagespeed StatisticsPath /ngx_pagespeed_statistics;
-pagespeed GlobalStatisticsPath /ngx_pagespeed_global_statistics;
-pagespeed MessagesPath /ngx_pagespeed_message;
-pagespeed ConsolePath /pagespeed_console;
-pagespeed AdminPath /pagespeed_admin;
-pagespeed GlobalAdminPath /pagespeed_global_admin;
-
-location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
-location /ngx_pagespeed_global_statistics { allow 127.0.0.1; deny all; }
-location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
-location /pagespeed_console { allow 127.0.0.1; deny all; }
-location ~ ^/pagespeed_admin { allow 127.0.0.1; deny all; }
-location ~ ^/pagespeed_global_admin { allow 127.0.0.1; deny all; }
+#location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
+#location /ngx_pagespeed_global_statistics { allow 127.0.0.1; deny all; }
+#location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
+#location /pagespeed_console { allow 127.0.0.1; deny all; }
+#location ~ ^/pagespeed_admin { allow 127.0.0.1; deny all; }
+#location ~ ^/pagespeed_global_admin { allow 127.0.0.1; deny all; }
 
 location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" {
   add_header "" "";
 }
+
 location ~ "^/pagespeed_static/" { }
 location ~ "^/ngx_pagespeed_beacon$" { }
