--- a/magento2/conf_m2/assets.conf
+++ b/magento2/conf_m2/assets.conf
@@ -1,7 +1,7 @@
 rewrite ^/static/(version\d*/)?(.*)$ /static/$2 last;
 location ~ ^/static/(version\d*/)?(.*)$ {
     ## images css js
-    location ~* \.(jpg|jpeg|png|gif|svg|js|css|ico|txt)$ {
+    location ~* \.(jpg|jpeg|png|gif|svg|js|json|css|ico|txt)$ {
         expires max;
         add_header ETag "";
         add_header Access-Control-Allow-Origin *;
