Modify filters for optimal performance

--- a/magento2/conf_m2/pagespeed.conf
+++ b/magento2/conf_m2/pagespeed.conf
@@ -3,14 +3,21 @@ pagespeed XHeaderValue "Powered By ngx_pagespeed";
 
 pagespeed Domain *;
 
+pagespeed Disallow widget.trustpilot.com;
+
+pagespeed MapOriginDomain http://localhost https://*tatic.*.co*;
+pagespeed MapOriginDomain http://localhost https://*edia.*.co*;
+pagespeed MapOriginDomain http://localhost *tatic*.*.co*;
+pagespeed MapOriginDomain http://localhost *edia*.*.co*;
+
 pagespeed SslCertDirectory /etc/pki/tls/certs;
 pagespeed SslCertFile /etc/pki/tls/cert.pem;
 
 #pagespeed RewriteLevel PassThrough;
-#pagespeed EnableFilters debug;
+pagespeed EnableFilters debug;
 
 pagespeed EnableFilters extend_cache;
-pagespeed FileCachePath "/tmp/";
+pagespeed FileCachePath  "/tmp/";
 pagespeed FileCacheSizeKb 2048576;
 pagespeed FileCacheCleanIntervalMs 86400;
 pagespeed FileCacheInodeLimit 500000;
@@ -38,24 +45,24 @@ pagespeed EnableFilters remove_comments;
 pagespeed EnableFilters elide_attributes;
 pagespeed EnableFilters inline_import_to_link;
 
+pagespeed EnableFilters prioritize_critical_css;
 pagespeed EnableFilters rewrite_javascript;
 pagespeed EnableFilters inline_javascript;
 pagespeed EnableFilters canonicalize_javascript_libraries;
 
 ###
-pagespeed DisableFilters outline_javascript;
-pagespeed DisableFilters defer_javascript;
-pagespeed DisableFilters combine_javascript;
-pagespeed DisableFilters insert_image_dimensions;
-pagespeed DisableFilters combine_css;
-pagespeed CombineAcrossPaths off;
+#pagespeed DisableFilters outline_javascript;
+#pagespeed DisableFilters defer_javascript;
+#pagespeed DisableFilters combine_javascript;
+#pagespeed DisableFilters insert_image_dimensions;
+#pagespeed DisableFilters combine_css;
+#pagespeed CombineAcrossPaths off;
 ###
 
 pagespeed RespectVary on;
 pagespeed EnableFilters insert_dns_prefetch;
 
 pagespeed RetainComment "esi*";
-pagespeed Disallow "*/ADMIN_PLACEHOLDER/*";
 
 #location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
 #location /ngx_pagespeed_global_statistics { allow 127.0.0.1; deny all; }
