Message buffer size

--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -9,6 +9,8 @@ pagespeed ConsolePath /pagespeed_console;
 pagespeed AdminPath /pagespeed_admin;
 pagespeed GlobalAdminPath /pagespeed_global_admin;
 
+pagespeed MessageBufferSize 100000;
+
 server {
 
     listen 80 reuseport default_server;
