--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -30,6 +30,9 @@ server {
     root $MAGE_ROOT/pub;
 
     ## Nginx and php-fpm status
+    include conf_m2/pagespeed.conf;
+
+    ## Nginx and php-fpm status
     include conf_m2/status.conf;
 
     ## Server maintenance block.
