Enable additional filters

--- a/magento2/conf_m2/pagespeed.conf
+++ b/magento2/conf_m2/pagespeed.conf
@@ -50,14 +50,12 @@ pagespeed EnableFilters rewrite_javascript;
 pagespeed EnableFilters inline_javascript;
 pagespeed EnableFilters canonicalize_javascript_libraries;
 
-###
-#pagespeed DisableFilters outline_javascript;
-#pagespeed DisableFilters defer_javascript;
-#pagespeed DisableFilters combine_javascript;
-#pagespeed DisableFilters insert_image_dimensions;
-#pagespeed DisableFilters combine_css;
-#pagespeed CombineAcrossPaths off;
-###
+pagespeed EnableFilters outline_javascript;
+pagespeed EnableFilters defer_javascript;
+pagespeed EnableFilters combine_javascript;
+pagespeed EnableFilters insert_image_dimensions;
+pagespeed EnableFilters combine_css;
+pagespeed CombineAcrossPaths off;
 
 pagespeed RespectVary on;
 pagespeed EnableFilters insert_dns_prefetch;
