Set to localhost

--- a/magento2/conf_m2/pagespeed.conf
+++ b/magento2/conf_m2/pagespeed.conf
@@ -5,10 +5,10 @@ pagespeed Domain *;
 
 pagespeed Disallow widget.trustpilot.com;
 
-pagespeed MapOriginDomain http://127.0.0.1:9000 https://*tatic.*.co*;
-pagespeed MapOriginDomain http://127.0.0.1:9000 https://*edia.*.co*;
-pagespeed MapOriginDomain http://127.0.0.1:9000 *tatic*.*.co*;
-pagespeed MapOriginDomain http://127.0.0.1:9000 *edia*.*.co*;
+pagespeed MapOriginDomain http://localhost https://*tatic.*.co*;
+pagespeed MapOriginDomain http://localhost https://*edia.*.co*;
+pagespeed MapOriginDomain http://localhost *tatic*.*.co*;
+pagespeed MapOriginDomain http://localhost *edia*.*.co*;
 
 pagespeed SslCertDirectory /etc/pki/tls/certs;
 pagespeed SslCertFile /etc/pki/tls/cert.pem;
