Update to respect forwarded proto - avoids mixed content issues

--- a/magento2/conf_m2/pagespeed.conf
+++ b/magento2/conf_m2/pagespeed.conf
@@ -10,6 +10,8 @@ pagespeed MapOriginDomain http://localhost https://*edia.*.co*;
 pagespeed MapOriginDomain http://localhost *tatic*.*.co*;
 pagespeed MapOriginDomain http://localhost *edia*.*.co*;
 
+pagespeed RespectXForwardedProto on;
+
 pagespeed SslCertDirectory /etc/pki/tls/certs;
 pagespeed SslCertFile /etc/pki/tls/cert.pem;
 
