--- a/magento2/conf_m2/pagespeed.conf
+++ b/magento2/conf_m2/pagespeed.conf
@@ -16,7 +16,7 @@ pagespeed SslCertDirectory /etc/pki/tls/certs;
 pagespeed SslCertFile /etc/pki/tls/cert.pem;
 
 #pagespeed RewriteLevel PassThrough;
-pagespeed EnableFilters debug;
+#pagespeed EnableFilters debug;
 
 pagespeed EnableFilters extend_cache;
 pagespeed FileCachePath "/tmp/";
