Disable remove comments

--- a/magento2/conf_m2/pagespeed.conf
+++ b/magento2/conf_m2/pagespeed.conf
@@ -43,7 +43,7 @@ pagespeed EnableFilters move_css_above_scripts;
 pagespeed EnableFilters move_css_to_head;
 
 pagespeed EnableFilters collapse_whitespace;
-pagespeed EnableFilters remove_comments;
+#pagespeed EnableFilters remove_comments;
 pagespeed EnableFilters elide_attributes;
 pagespeed EnableFilters inline_import_to_link;
 
