--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -64,12 +64,12 @@ pagespeed EnableFilters insert_dns_prefetch;
 
 pagespeed RetainComment "esi*";
 
-#location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
-#location /ngx_pagespeed_global_statistics { allow 127.0.0.1; deny all; }
-#location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
-#location /pagespeed_console { allow 127.0.0.1; deny all; }
-#location ~ ^/pagespeed_admin { allow 127.0.0.1; deny all; }
-#location ~ ^/pagespeed_global_admin { allow 127.0.0.1; deny all; }
+location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
+location /ngx_pagespeed_global_statistics { allow 127.0.0.1; deny all; }
+location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
+location /pagespeed_console { allow 127.0.0.1; deny all; }
+location ~ ^/pagespeed_admin { allow 127.0.0.1; deny all; }
+location ~ ^/pagespeed_global_admin { allow 127.0.0.1; deny all; }
 
 location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" {
   add_header "" "";
