--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -3,7 +3,8 @@ pagespeed XHeaderValue "Powered By ngx_pagespeed";
 
 pagespeed Domain *;
 
-pagespeed Disallow widget.trustpilot.com;
+pagespeed Disallow https://widget.trustpilot.com*;
+pagespeed Disallow "*/ADMIN_PLACEHOLDER/*";
 
 pagespeed MapOriginDomain http://localhost https://*tatic.*.co*;
 pagespeed MapOriginDomain http://localhost https://*edia.*.co*;
