Disable JS screwing up

--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -3,7 +3,7 @@ pagespeed XHeaderValue "Powered By ngx_pagespeed";
 
 pagespeed Domain *;
 
-pagespeed Disallow https://widget.trustpilot.com*;
+pagespeed Disallow https://widget.trustpilot.com;
 pagespeed Disallow "*/ADMIN_PLACEHOLDER/*";
 
 pagespeed MapOriginDomain http://localhost https://*tatic.*.co*;
@@ -53,9 +53,9 @@ pagespeed EnableFilters rewrite_javascript;
 pagespeed EnableFilters inline_javascript;
 pagespeed EnableFilters canonicalize_javascript_libraries;
 
-pagespeed EnableFilters outline_javascript;
-pagespeed EnableFilters defer_javascript;
-pagespeed EnableFilters combine_javascript;
+#pagespeed EnableFilters outline_javascript;
+#pagespeed EnableFilters defer_javascript;
+#pagespeed EnableFilters combine_javascript;
 pagespeed EnableFilters insert_image_dimensions;
 pagespeed EnableFilters combine_css;
 pagespeed CombineAcrossPaths off;
