Enable CORS for static assets (html and JSON extensions were missing)

--- a/magento2/nginx/assets.conf
+++ b/magento2/nginx/assets.conf
@@ -4,16 +4,16 @@ location ~ ^/static/(version\d*/)?(.*)$ {
     location ~* \.(jpg|jpeg|png|gif|svg|js|json|css|ico|txt)$ {
         expires max;
         add_header ETag "";
-        add_header Access-Control-Allow-Origin *;
         add_header Cache-Control "public";
+        include /etc/nginx/conf_m2/cors.conf;
         try_files $uri $uri/ @static;
     }
     ## fonts
     location ~* \.(swf|eot|ttf|otf|woff|woff2)$ {
         expires max;
         add_header ETag "";
-        add_header Access-Control-Allow-Origin *;
         add_header Cache-Control "public";
+        include /etc/nginx/conf_m2/cors.conf;
         try_files $uri $uri/ @static;
     }
     try_files $uri $uri/ @static;
@@ -25,16 +25,16 @@ location /media/ {
     location ~* \.(jpg|jpeg|png|gif|svg|js|css|ico|txt)$ {
         expires max;
         add_header ETag "";
-        add_header Access-Control-Allow-Origin *;
         add_header Cache-Control "public";
+        include /etc/nginx/conf_m2/cors.conf;
         try_files $uri $uri/ @media;
     }
     ## fonts
     location ~* \.(swf|eot|ttf|otf|woff|woff2)$ {
         expires max;
         add_header ETag "";
-        add_header Access-Control-Allow-Origin *;
         add_header Cache-Control "public";
+        include /etc/nginx/conf_m2/cors.conf;
         try_files $uri $uri/ @media;
     }
     try_files $uri $uri/ @media;
