Re-enable the outline JS filter

--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -53,7 +53,7 @@ pagespeed EnableFilters rewrite_javascript;
 pagespeed EnableFilters inline_javascript;
 pagespeed EnableFilters canonicalize_javascript_libraries;
 
-#pagespeed EnableFilters outline_javascript;
+pagespeed EnableFilters outline_javascript;
 #pagespeed EnableFilters defer_javascript;
 #pagespeed EnableFilters combine_javascript;
 pagespeed EnableFilters insert_image_dimensions;
