Disable JS outlining and filters temporarily

--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -49,11 +49,11 @@ pagespeed EnableFilters elide_attributes;
 pagespeed EnableFilters inline_import_to_link;
 
 pagespeed EnableFilters prioritize_critical_css;
-pagespeed EnableFilters rewrite_javascript;
-pagespeed EnableFilters inline_javascript;
-pagespeed EnableFilters canonicalize_javascript_libraries;
+#pagespeed EnableFilters rewrite_javascript;
+#pagespeed EnableFilters inline_javascript;
+#pagespeed EnableFilters canonicalize_javascript_libraries;
 
-pagespeed EnableFilters outline_javascript;
+#pagespeed EnableFilters outline_javascript;
 #pagespeed EnableFilters defer_javascript;
 #pagespeed EnableFilters combine_javascript;
 pagespeed EnableFilters insert_image_dimensions;
