Disallow pagespeed on the checkout

--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -5,6 +5,7 @@ pagespeed Domain *;
 
 pagespeed Disallow https://widget.trustpilot.com;
 pagespeed Disallow "*/ADMIN_PLACEHOLDER/*";
+pagespeed Disallow "*/checkout/*";
 
 pagespeed MapOriginDomain http://localhost https://*tatic.*.co*;
 pagespeed MapOriginDomain http://localhost https://*edia.*.co*;
