--- a/magento2/nginx.conf
+++ b/magento2/nginx.conf
@@ -78,6 +78,7 @@ http {
 
     ## Use when Varnish in front
     set_real_ip_from 127.0.0.1;
+    set_real_ip_from 10.0.0.0/8;
     real_ip_header X-Forwarded-For;
 
     ## Main domain configuration
