HTML files added to static to allow CORS to pass through

--- a/magento2/nginx/assets.conf
+++ b/magento2/nginx/assets.conf
@@ -1,7 +1,7 @@
 rewrite ^/static/(version\d*/)?(.*)$ /static/$2 last;
 location ~ ^/static/(version\d*/)?(.*)$ {
-    ## images css js
-    location ~* \.(jpg|jpeg|png|gif|svg|js|json|css|ico|txt)$ {
+    ## images css js html
+    location ~* \.(jpg|jpeg|png|gif|svg|js|json|css|ico|txt|html)$ {
         expires max;
         add_header ETag "";
         add_header Cache-Control "public";
