--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -29,6 +29,9 @@ server {
     ## Set main public directory /pub
     root $MAGE_ROOT/pub;
 
+    ## Redirect anything with a trailing slash to the non-trailing-slahs version
+    rewrite ^/(.*)/$ /$1 permanent;
+
     ## Nginx and php-fpm status
     include conf_m2/pagespeed.conf;
 
