Disable insert_image_dimensions filter to stop images appearing skewed

--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -58,7 +58,7 @@ pagespeed EnableFilters prioritize_critical_css;
 #pagespeed EnableFilters outline_javascript;
 #pagespeed EnableFilters defer_javascript;
 #pagespeed EnableFilters combine_javascript;
-pagespeed EnableFilters insert_image_dimensions;
+#pagespeed EnableFilters insert_image_dimensions;
 pagespeed EnableFilters combine_css;
 pagespeed CombineAcrossPaths off;
 
