--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -30,7 +30,7 @@ server {
     root $MAGE_ROOT/pub;
 
     ## Redirect anything with a trailing slash to the non-trailing-slahs version
-    rewrite ^/(.*)/$ /$1 permanent;
+    ##rewrite ^/(.*)/$ /$1 permanent;
 
     ## Nginx and php-fpm status
     include conf_m2/pagespeed.conf;
