Allow pagespeed to purge the varnish cache

--- a/magento2/nginx/pagespeed.conf
+++ b/magento2/nginx/pagespeed.conf
@@ -13,6 +13,9 @@ pagespeed MapOriginDomain http://localhost https://*edia.*.co*;
 pagespeed MapOriginDomain http://localhost *tatic*.*.co*;
 pagespeed MapOriginDomain http://localhost *edia*.*.co*;
 
+pagespeed DownstreamCachePurgeLocationPrefix http://localhost:80;
+pagespeed DownstreamCacheRebeaconingKey "SECRETKEY";
+
 pagespeed RespectXForwardedProto on;
 
 pagespeed SslCertDirectory /etc/pki/tls/certs;
