Allow beacon instrumentation for randomly allocated fails

--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -11,6 +11,12 @@ pagespeed GlobalAdminPath /pagespeed_global_admin;
 
 pagespeed MessageBufferSize 100000;
 
+# Define a mapping used to mark HTML as uncacheable.
+map $upstream_http_content_type $new_cache_control_header_val {
+    default $upstream_http_cache_control;
+    "~*text/html" "no-cache, max-age=0";
+}
+
 server {
 
     listen 8080 reuseport default_server;
@@ -21,6 +27,16 @@ server {
 
     if ($bad_client) {
         return 403;
+    }
+
+    # PageSpeed's beacon dependent filters need the cache to let some requests
+    # through to the backend.  This code below depends on the ngx_set_misc
+    # module and randomly passes 5% of traffic to the backend for rebeaconing.
+    set $should_beacon_header_val "";
+    set_random $rand 0 100;
+    if ($rand ~* "^[0-4]$") {
+        set $should_beacon_header_val "SECRETKEY";
+        set $bypass_cache 1;
     }
 
     ## Set Magento root folder
