--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -66,6 +66,28 @@ server {
     }
 
     location / {
+
+        # What servers should we accept PURGE requests from?  If PageSpeed isn't
+        # running on the same server as your cache, list the IP(s) of the
+        # PageSpeed machine(s) here.
+        #
+        # This requires rebuilding with the ngx_cache_purge module:
+        #   https://github.com/FRiCKLE/ngx_cache_purge
+        proxy_cache_purge PURGE from 127.0.0.1;
+
+        # Mark HTML as uncacheable.  If we can't send them purge requests they
+        # can't cache our html.  Uses the map defined above.
+        proxy_hide_header Cache-Control;
+        add_header Cache-Control $new_cache_control_header_val;
+
+        # Tell PageSpeed not to use optimizations specific to this request.
+        proxy_set_header PS-CapabilityList "fully general optimizations only";
+
+        # See discussion of rebeaconing above.
+        proxy_cache_bypass $bypass_cache;
+        proxy_hide_header PS-ShouldBeacon;
+        proxy_set_header PS-ShouldBeacon $should_beacon_header_val;
+
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
