--- a/magento2/nginx.conf
+++ b/magento2/nginx.conf
@@ -4,9 +4,9 @@ worker_rlimit_nofile 100000;
 
 ## Load Dynamic Modules ##
 load_module modules/ngx_pagespeed.so;
-load_module modules/ngx_http_cache_purge_module.so;
-load_module modules/ndk_http_module.so;
-load_module modules/ngx_http_set_misc_module.so;
+#load_module modules/ngx_http_cache_purge_module.so;
+#load_module modules/ndk_http_module.so;
+#load_module modules/ngx_http_set_misc_module.so;
 #load_module modules/ngx_http_geoip_module.so;
 #load_module modules/ngx_http_perl_module.so;
 
