Remove GuzzleHttp from the restrictions list

--- a/magento2/nginx/maps.conf
+++ b/magento2/nginx/maps.conf
@@ -45,7 +45,7 @@ map $http_user_agent $bad_client {
     ~*(Daumoa|Default|DeuSu|DIIbot|DISCo|discobot|DoCoMo|DuckDuckGo) 1;
     ~*(EasouSpider|eCatch|ecxi|EirGrabber|EmailCollector|EmailSiphon|EmailWolf|ExtractorPro|Exabot|Exploratodo|EyeNetIE) 1;
     ~*(FatBot|FlashGet|Findxbot) 1;
-    ~*(GetRight|GetWeb!|GigablastOpenSource|Gigabot|gimme60bot|Go!Zilla|Go-Ahead-Got-It|Go.*package.*|GrabNet|Grafula|GT::WWW|GuzzleHttp) 1;
+    ~*(GetRight|GetWeb!|GigablastOpenSource|Gigabot|gimme60bot|Go!Zilla|Go-Ahead-Got-It|Go.*package.*|GrabNet|Grafula|GT::WWW) 1;
     ~*(heritrix|HaosouSpider|HMView|HTTP::Lite|HTTrack) 1;
     ~*(ia_archiver|IDBot|id-search|id-search.org|InterGET|InternetSeer.com|IRLbot) 1;
     ~*(JetCar) 1;
