Disable robots block and format location blocks

--- a/magento2/nginx/extra_protect.conf
+++ b/magento2/nginx/extra_protect.conf
@@ -16,30 +16,24 @@ location ~ (auth|package|composer)\.(json|lock)$ { deny all; }
 
 # Limit requests and return "GONE 410" for search bots (if you need something more - use firewall/iptables)
 location ~ ^/(fire|one.+)?checkout/  {
-        limit_req zone=zone1 burst=8;
-        limit_req_status 429;
-        if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|rogerbot|Yahoo|Yandex") { return 410; }
-        try_files $uri $uri/ /index.php$is_args$args;
-        }
+    limit_req zone=zone1 burst=8;
+    limit_req_status 429;
+    if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|rogerbot|Yahoo|Yandex") { return 410; }
+    try_files $uri $uri/ /index.php$is_args$args;
+}
         
 location ~ ^/(wishlist|customer|catalog/product_compare|tag/product/list|sales/guest/view)/  {
-        limit_req zone=zone2 burst=4;
-        limit_req_status 429;
-        if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|rogerbot|Yahoo|Yandex") { return 410; }
-        try_files $uri $uri/ /index.php$is_args$args;
-        }        
+    limit_req zone=zone2 burst=4;
+    limit_req_status 429;
+    if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|rogerbot|Yahoo|Yandex") { return 410; }
+    try_files $uri $uri/ /index.php$is_args$args;
+}        
         
 location ~* ^/((catalog)?search/ajax.+ges?t|newsletter|sendfriend|contact/index/post|review/product/post)/ {
-        limit_req zone=zone3 burst=4;
-        limit_req_status 429;
-        if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|rogerbot|Yahoo|Yandex") { return 410; }
-        try_files $uri $uri/ /index.php$is_args$args;
-        }
-        
-## Disable API calls. Allow only your verified IP address
-location ~ /(index\.php/)?(async|rest|soap)/V1/customers {
-    #allow x.x.x.x;
-    deny  all;
+    limit_req zone=zone3 burst=4;
+    limit_req_status 429;
+    if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|rogerbot|Yahoo|Yandex") { return 410; }
+    try_files $uri $uri/ /index.php$is_args$args;
 }
 
 ## Remove "index.php" in url
@@ -48,9 +42,9 @@ location ~ /(index\.php/)?(async|rest|soap)/V1/customers {
 #if ($no_index_php = AB) { return 301 $1$3; }
 
 ## Dont let search bots to drill your website | exclude some args from indexing
-if ($args ~ ^(brand|cat|color|dir|from|limit|price|type|mode|size|manufacturer|product_list_mode|product_list_order|product_list_dir)=.+) { set $filters A; }
-if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|Yahoo|Yandex") { set $filters "${filters}B"; }
-if ($filters = AB) { return 410; }
+#if ($args ~ ^(brand|cat|color|dir|from|limit|price|type|mode|size|manufacturer|product_list_mode|product_list_order|product_list_dir)=.+) { set $filters A; }
+#if ($http_user_agent ~* "Baiduspider|Googlebot|bingbot|Yahoo|Yandex") { set $filters "${filters}B"; }
+#if ($filters = AB) { return 410; }
 
 ## Wordpress files and locations protection
 location ~ /wp-config\.php { deny all; }
