--- a/magento2/sites-available/magento2.conf
+++ b/magento2/sites-available/magento2.conf
@@ -63,7 +63,7 @@ server {
     include conf_m2/extra_protect.conf;
 
     ## Process php files (strict rule, define files to be executed)
-    location ~ ^/(index|health_check|get|static|errors/(report|404|503))\.php$ {
+    location ~ ^/(index|health_check|vars|get|static|errors/(report|404|503))\.php$ {
 
         try_files $uri =404;
         #    fastcgi_intercept_errors on;
