Allow screaming frog

--- a/magento2/nginx/maps.conf
+++ b/magento2/nginx/maps.conf
@@ -56,7 +56,7 @@ map $http_user_agent $bad_client {
     ~*(PageGrabber|panscient.com|pavuk|PECL::HTTP|PeoplePal|pcBrowser|Pi-Monster|PHPCrawl|PleaseCrawl|psbot|prijsbest) 1;
     ~*(Qwantify) 1;
     ~*(RealDownload|ReGet|RedesScrapy|Rippers|RocketCrawler) 1;
-    ~*(SBIder|Scrapy|ScreenerBot|SEOprofiler|Screaming.*Spider|SeaMonkey|SeznamBot|SemrushBot|sitecheck.internetseer.com|SiteSnagger) 1;
+    ~*(SBIder|Scrapy|ScreenerBot|SEOprofiler|SeaMonkey|SeznamBot|SemrushBot|sitecheck.internetseer.com|SiteSnagger) 1;
     ~*(SmartDownload|Snoopy|SputnikBot|Steeler|SuperBot|SuperHTTP|Surfbot|sqlmap) 1;
     ~*(tAkeOut|Teleport|Toata|TwengaBot|Typhoeus) 1;
     ~*(URI::Fetch|User-Agent|UserAgent) 1;
